--- a/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
+++ b/www.nass.gov.ng/b5848ea20293bb8e210857fae64800264f00f0a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:55:02 GMT
+    - Mon, 13 Aug 2018 21:13:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=29zh9hvnbEvQXjMY3WX7x1; path=/
+    - PHPSESSID=w6auTwv4jF%2CpTN2aLd0Nj0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:55:02 GMT
+recorded_at: Mon, 13 Aug 2018 21:13:42 GMT
