--- a/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
+++ b/www.nass.gov.ng/883bb8348c43cdc1799da9a76d72721bd7301292.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 07:56:35 GMT
+    - Mon, 13 Aug 2018 21:16:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oNbgwRm%2CGnsr3qU9PcKw90; path=/
+    - PHPSESSID=9b-5Tlem%2CesEYGFC351Gs1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 07:56:35 GMT
+recorded_at: Mon, 13 Aug 2018 21:16:12 GMT
