--- a/www.nass.gov.ng/93d01e0f504039c20978c14542e63b39539a5ce7.yml
+++ b/www.nass.gov.ng/93d01e0f504039c20978c14542e63b39539a5ce7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:10:01 GMT
+    - Mon, 13 Aug 2018 21:31:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zbGH6Ehmtv%2CAiNyiVx7mp2; path=/
+    - PHPSESSID=Eitjfco9crNdI0eizL3tJ3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:10:01 GMT
+recorded_at: Mon, 13 Aug 2018 21:31:16 GMT
