--- a/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
+++ b/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:27:58 GMT
+    - Mon, 13 Aug 2018 21:51:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0qt1z3-zgK%2CchHcYu1q1H0; path=/
+    - PHPSESSID=gIl1GbPi3TqI0BVbktrV30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:27:58 GMT
+recorded_at: Mon, 13 Aug 2018 21:51:58 GMT
