--- a/www.nass.gov.ng/1af3fbe7324499668bc712c857ebc1a8b0303714.yml
+++ b/www.nass.gov.ng/1af3fbe7324499668bc712c857ebc1a8b0303714.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 08:58:31 GMT
+    - Mon, 13 Aug 2018 22:23:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-UOhRGyLib-0zegIK3rkZ2; path=/
+    - PHPSESSID=t2ZrKSoh0b6CLJ2KVO0U%2C1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 08:58:31 GMT
+recorded_at: Mon, 13 Aug 2018 22:23:43 GMT
