--- a/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
+++ b/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 09:27:50 GMT
+    - Mon, 13 Aug 2018 22:54:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zDLVMO9J0FieDbVfWcTql3; path=/
+    - PHPSESSID=IA8xkwjFbV2RIB%2CFnNvW52; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 09:27:51 GMT
+recorded_at: Mon, 13 Aug 2018 22:54:35 GMT
