--- a/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
+++ b/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 10:29:48 GMT
+    - Mon, 13 Aug 2018 23:53:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3d6x0o5%2Cf297bTgBIKdGb1; path=/
+    - PHPSESSID=95PfAdXpF7Oe3p6T4aDNs0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 10:29:48 GMT
+recorded_at: Mon, 13 Aug 2018 23:53:42 GMT
