--- a/www.nass.gov.ng/1a79c4c453280b0986eb8722e527cc5f31bb2daf.yml
+++ b/www.nass.gov.ng/1a79c4c453280b0986eb8722e527cc5f31bb2daf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 10:41:47 GMT
+    - Tue, 14 Aug 2018 00:06:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DCXwt%2CY25D8PLB%2CfV9TVr1; path=/
+    - PHPSESSID=1m7GXR2qiiE7MNO3lQdx23; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 10:41:47 GMT
+recorded_at: Tue, 14 Aug 2018 00:06:22 GMT
