--- a/www.nass.gov.ng/7b3392fc0a5131bd33a4d2615d9b05f6f939e396.yml
+++ b/www.nass.gov.ng/7b3392fc0a5131bd33a4d2615d9b05f6f939e396.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 10:57:52 GMT
+    - Tue, 14 Aug 2018 00:19:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LIVFZuYmi6e8eoqgELzIs2; path=/
+    - PHPSESSID=7wiJdLonsPqi5dJld%2CLYP2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 10:57:53 GMT
+recorded_at: Tue, 14 Aug 2018 00:19:58 GMT
